welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:6: error: not found: value dejaFait
for (nbPas <- 1 to dejaFait) { 
                   ^