welcome.lessons.welcome.loopfor.LoopFor.scala.code
for (nbPas <- 1 to 6) { 
    avance();
}
prendBiscuit()
for (nbPas <- 1 to dejaFait) { 
    recule();
   }